--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,72 +6,193 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+    --ifm-color-primary: #772fbe;
+    --ifm-color-primary-dark: #6b2aab;
+    --ifm-color-primary-darker: #6528a2;
+    --ifm-color-primary-darkest: #532185;
+    --ifm-color-primary-light: #8337ce;
+    --ifm-color-primary-lighter: #8941d0;
+    --ifm-color-primary-lightest: #9a5dd7;
+
+    --ifm-code-font-size: 95%;
 }
 
-/* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+[data-theme="dark"] {
+    --ifm-color-primary: #e42aaa;
+    --ifm-color-primary-dark: #d81b9d;
+    --ifm-color-primary-darker: #cc1a94;
+    --ifm-color-primary-darkest: #a8157a;
+    --ifm-color-primary-light: #e742b4;
+    --ifm-color-primary-lighter: #e94eb8;
+    --ifm-color-primary-lightest: #ed72c7;
+
+    --ifm-font-color-secondary: rgba(255, 255, 255, 0.75);
 }
 
-/* Sidebar Method labels */
-.api-method>.menu__link {
-  align-items: center;
-  justify-content: start;
+::-webkit-scrollbar {
+    height: 8px;
+    width: 8px;
+    border-color: white;
 }
 
-.api-method>.menu__link::before {
-  width: 50px;
-  height: 20px;
-  font-size: 12px;
-  line-height: 20px;
-  text-transform: uppercase;
-  font-weight: 600;
-  border-radius: 0.25rem;
-  border: 1px solid;
-  margin-right: var(--ifm-spacing-horizontal);
-  text-align: center;
-  flex-shrink: 0;
-  border-color: transparent;
-  color: white;
+::-webkit-scrollbar-track {
+    background: transparent;
 }
 
-.get>.menu__link::before {
-  content: "get";
-  background-color: var(--ifm-color-primary);
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 50px;
+    min-height: 10px;
 }
 
-.put>.menu__link::before {
-  content: "put";
-  background-color: var(--openapi-code-blue);
+::-webkit-scrollbar-thumb:hover {
+    background: #aaa;
 }
 
-.post>.menu__link::before {
-  content: "post";
-  background-color: var(--openapi-code-green);
+[data-theme="light"] body::-webkit-scrollbar-track {
+    background: #303846;
 }
 
-.delete>.menu__link::before {
-  content: "del";
-  background-color: var(--openapi-code-red);
+[data-theme="dark"] body::-webkit-scrollbar-track {
+    background: #263238;
 }
 
-.patch>.menu__link::before {
-  content: "patch";
-  background-color: var(--openapi-code-orange);
+.menu-content {
+    top: var(--ifm-navbar-height) !important;
+}
+
+.docusaurus-highlight-code-line {
+    background-color: rgba(0, 0, 0, 0.1);
+    display: block;
+    margin: 0 calc(-1 * var(--ifm-pre-padding));
+    padding: 0 var(--ifm-pre-padding);
+}
+
+[data-theme="dark"] .docusaurus-highlight-code-line {
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.footer__logo {
+    max-width: none;
+}
+
+.sc-hsOonA * {
+    vertical-align: bottom !important;
+}
+
+.react-tabs__tab-list {
+    margin: 0 !important;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+}
+
+.react-tabs__tab-list li {
+    margin: 0 2px 5px 2px !important;
+}
+
+[data-theme="dark"] .cttTAR {
+    background-color: rgba(0, 0, 0, 0.3) !important;
+}
+
+[data-theme="dark"] .ePrFrj .sc-dIouRR .sc-dIouRR {
+    background-color: transparent !important;
+}
+
+[data-theme="dark"] .redocusaurus table tr {
+    background-color: var(--ifm-background-color) !important;
+}
+
+[data-theme="dark"] .sc-dUWWNf {
+    border-color: rgba(255, 255, 255, 0.25) !important;
+}
+
+[data-theme="dark"] .sc-evZas {
+    fill: white;
+}
+
+[data-theme="dark"] .eWuLTN {
+    font-size: 0.825em;
+    padding-bottom: 0.2em;
+    border-bottom: 1px solid rgba(199, 215, 225, 0.3);
+}
+
+.http-verb,
+.tab-success,
+.tab-error,
+.mvCdT,
+.sc-dUWWNf,
+.sc-eEOqmf,
+.sc-bBXxYQ,
+.sc-hsOonA,
+.react-tabs__tab,
+.react-tabs__tab-panel,
+.haMjZs > button,
+.dLPiEX,
+.dDFNiL,
+.sc-eKBdFk,
+.jwEbNr {
+    border-radius: 10px !important;
+}
+
+.cUYitw {
+    border-radius: 0 0 10px 10px !important;
+}
+
+.sc-eEOqmf.kasBwC,
+.sc-eEOqmf.eCpQIM {
+    border-color: transparent !important;
+    border-radius: 10px 10px 0 0 !important;
+}
+
+.hGcsei {
+    margin-bottom: 10px;
+}
+
+.hGcsei a {
+    border-top: 1px solid rgba(199, 215, 225, 0.3) !important;
+}
+
+.iHSIYu {
+    border-bottom: 1px solid rgba(199, 215, 225, 0.3) !important;
+}
+
+.ps__rail-x,
+.ps__rail-y {
+    display: none !important;
+}
+
+.Pftvm {
+    padding: 10px 0 !important;
+}
+
+.Pftvm .bQqNII,
+.Pftvm .bsnJMG {
+    left: 30px;
+}
+
+.Pftvm .lpkjwe,
+.Pftvm .fTacxC {
+    transition: border-color 0.25s;
+    border-radius: 10px;
+    border: 1px solid rgba(199, 215, 225, 0.3);
+    padding: 5px 20px 5px 30px;
+}
+
+.Pftvm .lpkjwe:focus,
+.Pftvm .fTacxC:focus {
+    border-color: var(--ifm-color-primary) !important;
+}
+
+.sc-eVQfli {
+    height: calc(100vh - 60px) !important;
+}
+
+.sc-eVQfli .sc-ikZpkk {
+    margin-right: 3px;
+    overflow: auto !important;
+}
+
+.sc-eVQfli .sc-ikZpkk::-webkit-scrollbar {
+    width: 5px;
 }
